colang-cli/tests/samples/features/bool/compile_error/comparison.co
fun main() {
  assert(false < true);
}
